fixed paragraph overflow

--- a/style.css
+++ b/style.css
@@ -43,9 +43,9 @@ main {
 }
 
 .threeGrid {
-display: flex;
-justify-content: space-between;
-margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 .ctr2 {
@@ -56,7 +56,6 @@ margin-bottom: 30px;
 
 .ctr2>div {
   padding: 5px 20px;
-  overflow: auto;
 }
 
 .ctr2>div>h3 {
@@ -65,8 +64,9 @@ margin-bottom: 30px;
   padding-bottom: 20px;
 }
 .ctr2>div>p {
-  padding-bottom: 20px;
   line-height: 1.2;
+  height: 260px;
+  overflow: auto;
 }
 
 button {
@@ -74,8 +74,9 @@ button {
   color: white;
   width: 50%;
   height: 40px;
-  font-size: 1.3em;
+  font-size: 1.4em;
   border-radius: 10px;
+  margin-top: 20px;
 }
 
 footer {
